# asero

./: CHANGELOG.md  README.md  dotenv.template  pyproject.toml
asero/: config.py  embedding.py  eval.py  main.py  normalise.py  router.py  util.py
tests/asero/: test_normalise.py
